# okokscale.py

./: README.md  pyproject.toml  requirements.txt
okokscale/: __init__.py  parser.py
tests/: __init__.py  test_parser.py
